--- a/Tadekam.html
+++ b/Tadekam.html
@@ -64,42 +64,42 @@
 					<ul class="navbar-nav hamburgerMenuList">
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText menuOptionTextSelected" id="HomeMenuHamburger" onclick="menuSelected(event,this.id)">
+								<a class="menuOptionText menuOptionTextSelected" id="HomeMenu" onclick="menuSelected(event,this.id)">
 									<div>Home</div>
 								</a>
 							</div>
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="AboutTadekamMenuHamburger" onclick="menuSelected(event,this.id)">
+								<a class="menuOptionText" id="AboutTadekamMenu" onclick="menuSelected(event,this.id)">
 									<div>About Us</div>
 								</a>
 							</div>
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="GalleryMenuHamburger" onclick="menuSelected(event,this.id)">
+								<a class="menuOptionText" id="GalleryMenu" onclick="menuSelected(event,this.id)">
 									<div>Gallery</div>
 								</a>
 							</div>
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="MediaMenuHamburger" onclick="menuSelected(event,this.id)">
+								<a class="menuOptionText" id="MediaMenu" onclick="menuSelected(event,this.id)">
 									<div>Media</div>
 								</a>
 							</div>
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="ProgramsMenuHamburger" onclick="menuSelected(event,this.id)">
+								<a class="menuOptionText" id="ProgramsMenu" onclick="menuSelected(event,this.id)">
 									<div>Programs</div>
 								</a>
 							</div>
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="ContactUsMenuHamburger" onclick="menuSelected(event,this.id)">
+								<a class="menuOptionText" id="ContactUsMenu" onclick="menuSelected(event,this.id)">
 									<div>Contact Us</div>
 								</a>
 							</div>
@@ -150,44 +150,35 @@
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8">
 					<div class="row footerRow1">
-						<div class="col-xs-5 colLocation">
-							<div class="row locationDetailRow"><b>Pune</b></div>
-							<div class="row locationDetailRow">9999999999</div>
-							<div class="row locationDetailRow">test@email.com</div>
-							<div class="row locationDetailRow">Address</div>
+						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+							<div class="columnFooterInfoText">
+								<img src="images/footer_logo.png" class="footerLogo">
+							</div>
 						</div>
-						<div class="col-xs-2"></div>
-						<div class="col-xs-5 colLocation">
-							<div class="row locationDetailRow"><b>Mumbai</b></div>
-							<div class="row locationDetailRow">9999999999</div>
-							<div class="row locationDetailRow">test@email.com</div>
-							<div class="row locationDetailRow">Address</div>
+						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+							<div class="columnFooterInfoText">
+								<div>+91 9999999999</div>
+							</div>
+						</div>
+						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+							<div class="columnFooterInfoText">
+								<div>babajitadekam@gmail.com</div>
+							</div>
+						</div>
+						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+							<div class="columnFooterInfoText">
+								<div>Follow Us</div>
+							</div>
 						</div>
 					</div>
 					<div class="row footerRow2">
-						<div class="col-xs-1 col-lg-2 footerMenuColumn">
-							<div class="row footerMenuRow">Home</div>
-							<div class="row footerMenuRow">About Tadekam</div>
-							<div class="row footerMenuRow">Programs</div>
-						</div>
-						<div class="col-xs-1 col-lg-2 footerMenuColumn">
-							<div class="row footerMenuRow">Media</div>
-							<div class="row footerMenuRow">Gallery</div>
-							<div class="row footerMenuRow">Connect</div>
-						</div>
-						<div class="col-xs-1 col-lg-2 footerMenuColumn">
-							<div class="row footerMenuRow">Amrit Book</div>
-							<div class="row footerMenuRow">Videos</div>
-							<div class="row footerMenuRow">Blogs</div>
-						</div>
-						<div class="col-xs-1 col-lg-2 footerMenuColumn">
-							<div class="row footerMenuRow">Folllow Us</div>
-							<div class="row footerMenuRow">Facebook</div>
-							<div class="row footerMenuRow">Youtube</div>
-						</div>
-						<div class="col-xs-1 col-lg-2 footerMenuColumn">
-							<img class="footerMenuLogo" src='images/footer_logo.png'/>
-						</div>
+						<div class="col-xs-6 col-lg-1 columnFooterMenu footerMenuSelected" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Home</div>
+						<div class="col-xs-6 col-lg-2 columnFooterMenu" id="AboutTadekamMenuFooter" onclick="menuSelected(event,this.id)">About Tadekam</div>
+						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="ProgramsMenuFooter" onclick="menuSelected(event,this.id)">Programs</div>
+						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id)">Media</div>
+						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="GalleryMenuFooter" onclick="menuSelected(event,this.id)">Gallery</div>
+						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="ContactUsMenuFooter" onclick="menuSelected(event,this.id)">Connect</div>
+						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Books</div>
 					</div>
 				</div>
 				<div class="col-xs-2"></div>
