--- a/Tadekam.html
+++ b/Tadekam.html
@@ -108,8 +108,8 @@
 				</div>
 			</div>
 			<div class="row banner mainContent mainContentSelected" id="mainContentHomeMenu">
-				<div class="bannerContent background col-sm-12"></div>
-				<div class="bannerContent foreground">
+				<div class="col-lg-12 background"></div>
+				<div class="row bannerContent foreground">
 					<div class="contentHolder">
 						<div class="contentColumn column1">
 							<div class="flip-card card-left">
@@ -143,6 +143,11 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					Tadekam Foundation
+				</div>
+			</div>
 			<div class="row mainContent" id="mainContentAboutTadekamMenu">
 				About Tadekam
 			</div>
@@ -150,35 +155,35 @@
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8">
 					<div class="row footerRow1">
-						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+						<div class="col-xs-12 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
 								<img src="images/footer_logo.png" class="footerLogo">
 							</div>
 						</div>
-						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+						<div class="col-xs-12 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
 								<div>+91 9999999999</div>
 							</div>
 						</div>
-						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+						<div class="col-xs-12 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
 								<div>babajitadekam@gmail.com</div>
 							</div>
 						</div>
-						<div class="col-xs-6 col-lg-3 columnFooterInfo">
+						<div class="col-xs-12 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
 								<div>Follow Us</div>
 							</div>
 						</div>
 					</div>
 					<div class="row footerRow2">
-						<div class="col-xs-6 col-lg-1 columnFooterMenu footerMenuSelected" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Home</div>
-						<div class="col-xs-6 col-lg-2 columnFooterMenu" id="AboutTadekamMenuFooter" onclick="menuSelected(event,this.id)">About Tadekam</div>
-						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="ProgramsMenuFooter" onclick="menuSelected(event,this.id)">Programs</div>
-						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id)">Media</div>
-						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="GalleryMenuFooter" onclick="menuSelected(event,this.id)">Gallery</div>
-						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="ContactUsMenuFooter" onclick="menuSelected(event,this.id)">Connect</div>
-						<div class="col-xs-6 col-lg-1 columnFooterMenu" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Books</div>
+						<div class="col-xs-12 col-lg-1 columnFooterMenu footerMenuSelected" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Home</div>
+						<div class="col-xs-12 col-lg-2 columnFooterMenu" id="AboutTadekamMenuFooter" onclick="menuSelected(event,this.id)">About Tadekam</div>
+						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="ProgramsMenuFooter" onclick="menuSelected(event,this.id)">Programs</div>
+						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id)">Media</div>
+						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="GalleryMenuFooter" onclick="menuSelected(event,this.id)">Gallery</div>
+						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="ContactUsMenuFooter" onclick="menuSelected(event,this.id)">Connect</div>
+						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="HomeMenuFooter" onclick="menuSelected(event,this.id)">Books</div>
 					</div>
 				</div>
 				<div class="col-xs-2"></div>
