--- a/Tadekam.html
+++ b/Tadekam.html
@@ -143,10 +143,45 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-12">
+			<div class="row headerOfContentRow">
+				<div class="col-1 col-sm-1 col-md-1 col-lg-2"></div>
+				<div class="col-1 col-sm-1 col-md-1 col-lg-8 titleContentHeader">
 					Tadekam Foundation
+					<div class="row">
+						<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+						<div class="col-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="row">
+								<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+								<div class="col-2 col-sm-2 col-md-2 col-lg-2 titleContentBorder"></div>
+								<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+							</div>
+						</div>
+						<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+					</div>
 				</div>
+				<div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
+			</div>
+			<div class="row headerOfContentRow">
+				<div class="col-lg-2"></div>
+				<div class="col-lg-8 titleContentHeader">
+					Our Founder
+					<div class="row">
+						<div class="col-lg-5"></div>
+						<div class="col-lg-2">
+							<div class="row">
+								<div class="col-lg-5"></div>
+								<div class="col-lg-2 titleContentBorder"></div>
+								<div class="col-lg-5"></div>
+							</div>
+						</div>
+						<div class="col-lg-5"></div>
+					</div>
+				</div>
+				<div class="col-lg-2"></div>
+			</div>
+			<div class="row contentRow">
+				<div class="col-lg-6"></div>
+				<div class="col-lg-1"></div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutTadekamMenu">
 				About Tadekam
