--- a/Tadekam.html
+++ b/Tadekam.html
@@ -107,81 +107,83 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row banner mainContent mainContentSelected" id="mainContentHomeMenu">
-				<div class="col-lg-12 background"></div>
-				<div class="row bannerContent foreground">
-					<div class="contentHolder">
-						<div class="contentColumn column1">
-							<div class="flip-card card-left">
-								<div class="flip-card-inner">
-									<div class="flip-card-front">
-										<div class="contentText contentSmaller contentLeftToRight">Tad</div>
+			<div class="row mainContent mainContentSelected" id="mainContentHomeMenu">
+				<div class="banner">
+					<div class="col-lg-12 background"></div>
+					<div class="row bannerContent foreground">
+						<div class="contentHolder">
+							<div class="contentColumn column1">
+								<div class="flip-card card-left">
+									<div class="flip-card-inner">
+										<div class="flip-card-front">
+											<div class="contentText contentSmaller contentLeftToRight">Tad</div>
+										</div>
+										<div class="flip-card-back">
+											<div class="contentText contentSmaller contentLeftToRight">That</div>
+										</div>
 									</div>
-									<div class="flip-card-back">
-										<div class="contentText contentSmaller contentLeftToRight">That</div>
+								</div>
+							</div>
+							<div class="contentColumn column2">
+								<div class="contentText contentSmaller">
+									<img src="images/Hands_Logo_white.png" alt="Hands Image">
+								</div>
+							</div>
+							<div class="contentColumn column3">
+								<div class="flip-card">
+									<div class="flip-card-inner">
+										<div class="flip-card-front">
+											<div class="contentText contentSmaller contentRightToLeft">Ekam</div>
+										</div>
+										<div class="flip-card-back">
+											<div class="contentText contentSmaller contentRightToLeft">One</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="contentColumn column2">
-							<div class="contentText contentSmaller">
-								<img src="images/Hands_Logo_white.png" alt="Hands Image">
-							</div>
-						</div>
-						<div class="contentColumn column3">
-							<div class="flip-card">
-								<div class="flip-card-inner">
-									<div class="flip-card-front">
-										<div class="contentText contentSmaller contentRightToLeft">Ekam</div>
-									</div>
-									<div class="flip-card-back">
-										<div class="contentText contentSmaller contentRightToLeft">One</div>
-									</div>
+					</div>
+				</div>
+				<div class="row headerOfContentRow">
+					<div class="col-1 col-sm-1 col-md-1 col-lg-2"></div>
+					<div class="col-1 col-sm-1 col-md-1 col-lg-8 titleContentHeader">
+						Tadekam Foundation
+						<div class="row">
+							<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+							<div class="col-2 col-sm-2 col-md-2 col-lg-2">
+								<div class="row">
+									<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+									<div class="col-2 col-sm-2 col-md-2 col-lg-2 titleContentBorder"></div>
+									<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
 								</div>
 							</div>
+							<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
 						</div>
 					</div>
+					<div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
 				</div>
-			</div>
-			<div class="row headerOfContentRow">
-				<div class="col-1 col-sm-1 col-md-1 col-lg-2"></div>
-				<div class="col-1 col-sm-1 col-md-1 col-lg-8 titleContentHeader">
-					Tadekam Foundation
-					<div class="row">
-						<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
-						<div class="col-2 col-sm-2 col-md-2 col-lg-2">
-							<div class="row">
-								<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
-								<div class="col-2 col-sm-2 col-md-2 col-lg-2 titleContentBorder"></div>
-								<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+				<div class="row headerOfContentRow">
+					<div class="col-lg-2"></div>
+					<div class="col-lg-8 titleContentHeader">
+						Our Founder
+						<div class="row">
+							<div class="col-lg-5"></div>
+							<div class="col-lg-2">
+								<div class="row">
+									<div class="col-lg-5"></div>
+									<div class="col-lg-2 titleContentBorder"></div>
+									<div class="col-lg-5"></div>
+								</div>
 							</div>
+							<div class="col-lg-5"></div>
 						</div>
-						<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
 					</div>
+					<div class="col-lg-2"></div>
 				</div>
-				<div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
-			</div>
-			<div class="row headerOfContentRow">
-				<div class="col-lg-2"></div>
-				<div class="col-lg-8 titleContentHeader">
-					Our Founder
-					<div class="row">
-						<div class="col-lg-5"></div>
-						<div class="col-lg-2">
-							<div class="row">
-								<div class="col-lg-5"></div>
-								<div class="col-lg-2 titleContentBorder"></div>
-								<div class="col-lg-5"></div>
-							</div>
-						</div>
-						<div class="col-lg-5"></div>
-					</div>
+				<div class="row contentRow">
+					<div class="col-lg-6"></div>
+					<div class="col-lg-1"></div>
 				</div>
-				<div class="col-lg-2"></div>
-			</div>
-			<div class="row contentRow">
-				<div class="col-lg-6"></div>
-				<div class="col-lg-1"></div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutTadekamMenu">
 				About Tadekam
