--- a/Tadekam.html
+++ b/Tadekam.html
@@ -145,40 +145,65 @@
 					</div>
 				</div>
 				<div class="row headerOfContentRow">
-					<div class="col-1 col-sm-1 col-md-1 col-lg-2"></div>
-					<div class="col-1 col-sm-1 col-md-1 col-lg-8 titleContentHeader">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
 						Tadekam Foundation
 						<div class="row">
-							<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
-							<div class="col-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
 								<div class="row">
-									<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
-									<div class="col-2 col-sm-2 col-md-2 col-lg-2 titleContentBorder"></div>
-									<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-5"></div>
 								</div>
 							</div>
-							<div class="col-5 col-sm-5 col-md-5 col-lg-5"></div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-12 col-lg-12">
+								Mahavtar Babaji Tadekam Foundation (MBTF) is a unique organization, probably the only one of its kind in the world. The visionary founder of MBTF along with his dedicated team bring simple result-oriented methods to people with the aim of ending the personal suffering and ignorance that humans dwell in and help them to lead lives of joy, excellence and illumination.
+							</div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-12 col-lg-12">
+								Tadekam means 'That One' which is the source of all that exists in the physical and spirit form. 'That One' energy which makes creation possible and 'That One' power that controls, sustains, destroys, and recreates all that is seen and unseen.
+							</div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-12 col-lg-12">
+								Our organization aims to bring about a greater awareness of your real connection to 'That One'. MBTF is not a cult, ashram, or new religion; nor does it subscribe to any organized religion, doctrine, sect, or belief system.
+							</div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-12 col-lg-12">
+								We offer programs that adopt new methods of operating ancient and traditional princilples of human enlightenment, keeping pace with new information and constantly evolving human race.
+							</div>
 						</div>
 					</div>
-					<div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
+					<div class="col-xs-2 col-lg-2"></div>
 				</div>
 				<div class="row headerOfContentRow">
-					<div class="col-lg-2"></div>
-					<div class="col-lg-8 titleContentHeader">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
 						Our Founder
 						<div class="row">
-							<div class="col-lg-5"></div>
-							<div class="col-lg-2">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
 								<div class="row">
-									<div class="col-lg-5"></div>
-									<div class="col-lg-2 titleContentBorder"></div>
-									<div class="col-lg-5"></div>
+									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-5"></div>
 								</div>
 							</div>
-							<div class="col-lg-5"></div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-12 col-lg-12">
+								Guruji Naushir has been spreading the teachings of Mahavtar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teaching and spiritual practices under one umbrella. He is in constant communication with Mahavtar Babaji whom he met in 2010.
+							</div>
 						</div>
 					</div>
-					<div class="col-lg-2"></div>
+					<div class="col-xs-2 col-lg-2"></div>
 				</div>
 				<div class="row contentRow">
 					<div class="col-lg-6"></div>
