--- a/Tadekam.html
+++ b/Tadekam.html
@@ -15,51 +15,51 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row header">
-				<div class="col-xs-3 col-md-2 logoHolder">
+				<div class="col-xs-3 col-md-3 col-lg-3 logoHolder">
 					<img class="logo" src='images/logo.png'/>
 				</div>
-				<div class="col-md-3">
+				<div class="col-xs-2 col-md-2 col-lg-2">
 				</div>
-				<div class="col-md-7 flatMenu">
-					<div class="col-md-2 menuOption">
+				<div class="col-xs-7 col-md-7 col-lg-7 flatMenu">
+					<div class="col-xs-1 col-md-2 col-lg-2 menuOption">
 						<a class="menuOptionText menuOptionTextSelected" id="HomeMenu" onclick="menuSelected(event,this.id)">
 							<div>Home</div>
 						</a>
 					</div>
-					<div class="col-md-2 menuOption">
+					<div class="col-xs-1 col-md-2 col-lg-2 menuOption">
 						<a class="menuOptionText" id="AboutTadekamMenu" onclick="menuSelected(event,this.id)">
 							<div>About Us</div>
 						</a>
 					</div>
-					<div class="col-md-2 menuOption">
+					<div class="col-xs-1 col-md-2 col-lg-2 menuOption">
 						<a class="menuOptionText" id="GalleryMenu" onclick="menuSelected(event,this.id)">
 							<div>Gallery</div>
 						</a>
 					</div>
-					<div class="col-md-2 menuOption">
+					<div class="col-xs-1 col-md-2 col-lg-2 menuOption">
 						<a class="menuOptionText" id="MediaMenu" onclick="menuSelected(event,this.id)">
 							<div>Media</div>
 						</a>
 					</div>
-					<div class="col-md-2 menuOption">
+					<div class="col-xs-1 col-md-2 col-lg-2 menuOption">
 						<a class="menuOptionText" id="ProgramsMenu" onclick="menuSelected(event,this.id)">
 							<div>Programs</div>
 						</a>
 					</div>
-					<div class="col-md-2 menuOption">
+					<div class="col-xs-1 col-md-2 col-lg-2 menuOption">
 						<a class="menuOptionText" id="ContactUsMenu" onclick="menuSelected(event,this.id)">
 							<div>Contact Us</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-xs-9 hamburgerMenu">
-					<button class=" button navbar-toggler hamburgerButton" type="button" data-toggle="collapse" data-target="#menuNavbar">
+					<button class="button navbar-toggler hamburgerButton" onclick="hamburgerOpenClicked()" type="button" data-toggle="collapse" data-target="#menuNavbar">
 						<span class="glyphicon glyphicon-menu-hamburger"></span>
 					</button>
 				</div>
 				<div class="col-xs-12 navbar-collapse collapse" id="menuNavbar" style="height:0px;">
-					<button id="buttonHamburgerClose" class=" button navbar-toggler hamburgerButton" type="button" data-toggle="collapse" data-target="#menuNavbar">
-						<span class="glyphicon glyphicon-remove-circle"></span>
+					<button id="buttonHamburgerClose" class="button navbar-toggler hamburgerButton" onclick="hamburgerCloseClicked()" type="button" data-toggle="collapse" data-target="#menuNavbar">
+						<span class="glyphicon glyphicon-remove-sign"></span>
 					</button>
 					<ul class="navbar-nav hamburgerMenuList">
 						<li class="nav-item">
@@ -217,7 +217,7 @@
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8">
 					<div class="row footerRow1">
-						<div class="col-xs-12 col-lg-3 columnFooterInfo">
+						<div class="col-xs-12 col-md-3 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
 								<img src="images/footer_logo.png" class="footerLogo">
 							</div>
