--- a/Tadekam.html
+++ b/Tadekam.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="images/logo.png" />
+		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/Tadekam.css">
 		<link rel="stylesheet" media='(min-width: 1200px)' href="css/Tadekam_Desktop.css">
@@ -159,26 +160,34 @@
 							</div>
 							<div class="col-xs-5 col-lg-5"></div>
 						</div>
-						<div class="row textRow">
-							<div class="col-xs-12 col-lg-12">
-								Mahavtar Babaji Tadekam Foundation (MBTF) is a unique organization, probably the only one of its kind in the world. The visionary founder of MBTF along with his dedicated team bring simple result-oriented methods to people with the aim of ending the personal suffering and ignorance that humans dwell in and help them to lead lives of joy, excellence and illumination.
-							</div>
-						</div>
-						<div class="row textRow">
-							<div class="col-xs-12 col-lg-12">
-								Tadekam means 'That One' which is the source of all that exists in the physical and spirit form. 'That One' energy which makes creation possible and 'That One' power that controls, sustains, destroys, and recreates all that is seen and unseen.
-							</div>
-						</div>
-						<div class="row textRow">
-							<div class="col-xs-12 col-lg-12">
-								Our organization aims to bring about a greater awareness of your real connection to 'That One'. MBTF is not a cult, ashram, or new religion; nor does it subscribe to any organized religion, doctrine, sect, or belief system.
-							</div>
-						</div>
-						<div class="row textRow">
-							<div class="col-xs-12 col-lg-12">
-								We offer programs that adopt new methods of operating ancient and traditional princilples of human enlightenment, keeping pace with new information and constantly evolving human race.
-							</div>
-						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						Mahavtar Babaji Tadekam Foundation (MBTF) is a unique organization, probably the only one of its kind in the world. The visionary founder of MBTF along with his dedicated team bring simple result-oriented methods to people with the aim of ending the personal suffering and ignorance that humans dwell in and help them to lead lives of joy, excellence and illumination.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						Tadekam means 'That One' which is the source of all that exists in the physical and spirit form. 'That One' energy which makes creation possible and 'That One' power that controls, sustains, destroys, and recreates all that is seen and unseen.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						Our organization aims to bring about a greater awareness of your real connection to 'That One'. MBTF is not a cult, ashram, or new religion; nor does it subscribe to any organized religion, doctrine, sect, or belief system.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						We offer programs that adopt new methods of operating ancient and traditional princilples of human enlightenment, keeping pace with new information and constantly evolving human race.
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
@@ -197,11 +206,13 @@
 							</div>
 							<div class="col-xs-5 col-lg-5"></div>
 						</div>
-						<div class="row textRow">
-							<div class="col-xs-12 col-lg-12">
-								Guruji Naushir has been spreading the teachings of Mahavtar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teaching and spiritual practices under one umbrella. He is in constant communication with Mahavtar Babaji whom he met in 2010.
-							</div>
-						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						Guruji Naushir has been spreading the teachings of Mahavtar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teaching and spiritual practices under one umbrella. He is in constant communication with Mahavtar Babaji whom he met in 2010.
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
@@ -211,7 +222,116 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutTadekamMenu">
-				About Tadekam
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						Our Founder
+						<div class="row">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
+								<div class="row">
+									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						Guruji Naushir, a successful professional, was a man of the world, till he met with three sages between 1998 and 2003. This propelled him to take a journey 'within', and from his intense seeking came answers to a human being's deep rooted sufferings and miseries.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						His deep compassion compelled him to dedicate his life to serving humanity, and he founded Mahavatar Babaji Tadekam Foundation (MBTF) with the motto – From illness to wellness, from suffering to solution and from ignorance to enlightenment.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						Mahavtar Babaji, the Omnipresent Guru, who is believed to be over 2000 years old, first started communicating with Guruji Naushir in 2000 leading to his meeting Babaji in person in 2010. In the course of these many years, Mahavtar Babaji, who is also made famous by Paramahansa Yogananda in his book 'Autobiography of a Yogi', has communicated certain spiritual information to Guruji Naushir which is designed into Programs  and courses created and conducted under MBTF.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						The Journey So Far...
+						<div class="row">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
+								<div class="row">
+									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						By Dr. Seema Khaire
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						Team Tadekam
+						<div class="row">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
+								<div class="row">
+									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						The balance sheet of Tadekam has only one asset. The asset comprises of the  small but growing number of deeply committed individuals who train and work  under the Tadekam banner. The collective aim of every individual associated  with Tadekam is common. That is to accomplish the vision spelt out in the  mission statement. 
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						What is unique is that all teachers, organizers, coordinators and supporters,  work for the organization without any agenda of profit or personal recognition.  Their motive is completely altruistic and no effort is spared to fulfill the  organization's primary goal of taking humanity from suffering and ignorance  to enlightenment. 
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row textRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						All Tadekam Teachers hold the license to teach the various courses and the  programs as designed by the founder Guruji Naushir.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
 			</div>
 			<div class="row footer">
 				<div class="col-xs-2"></div>
@@ -224,18 +344,25 @@
 						</div>
 						<div class="col-xs-12 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
-								<div>+91 9999999999</div>
+								<div>
+									<span class="glyphicon glyphicon-earphone"><span class="footerText">+91 9999999999</span></span>
+
+									</div>
 							</div>
 						</div>
 						<div class="col-xs-12 col-lg-3 columnFooterInfo">
 							<div class="columnFooterInfoText">
-								<div>babajitadekam@gmail.com</div>
+								<div>
+									<span class="glyphicon glyphicon-envelope"><span class="footerText">babajitadekam@gmail.com</span></span>
+								</div>
 							</div>
 						</div>
 						<div class="col-xs-12 col-lg-3 columnFooterInfo">
-							<div class="columnFooterInfoText">
-								<div>Follow Us</div>
-							</div>
+								<div class="columnFooterInfoText">
+									<div>
+										<span class="footerText">Follow Us<span class="fa fa-facebook-official"></span><span class="fa fa-youtube-play"></span><span class="fa fa-instagram"></span></span>
+									</div>
+								</div>
 						</div>
 					</div>
 					<div class="row footerRow2">
