--- a/Tadekam.html
+++ b/Tadekam.html
@@ -153,9 +153,9 @@
 							<div class="col-xs-5 col-lg-5"></div>
 							<div class="col-xs-2 col-lg-2">
 								<div class="row">
-									<div class="col-xs-2 col-lg-5"></div>
-									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
 							<div class="col-xs-5 col-lg-5"></div>
@@ -191,52 +191,110 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row headerOfContentRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8 titleContentHeader">
-						Our Founder
-						<div class="row">
-							<div class="col-xs-5 col-lg-5"></div>
-							<div class="col-xs-2 col-lg-2">
+				<div class="row backgroundHolderHomeOurFounder">
+					<div class="col-xs-12 col-lg-12">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								Our Founder
 								<div class="row">
-									<div class="col-xs-2 col-lg-5"></div>
-									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-5 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-2">
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-5 col-lg-5"></div>
 								</div>
 							</div>
-							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								<div class="col-xs-4 col-lg-4"></div>
+								<div class="col-xs-4 col-lg-4 namePhotoHolder">
+									<img src="images/guruji.jpg" alt="Guruji" class="namePhoto">
+								</div>
+								<div class="col-xs-4 col-lg-4"></div>
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								Guruji Naushir has been spreading the teachings of Mahavtar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teaching and spiritual practices under one umbrella. He is in constant communication with Mahavtar Babaji whom he met in 2010.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
 						</div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row textRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						Guruji Naushir has been spreading the teachings of Mahavtar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teaching and spiritual practices under one umbrella. He is in constant communication with Mahavtar Babaji whom he met in 2010.
+				<div class="row">
+					<div class="col-xs-8 col-lg-8 backgroundHomeTadekamForYou">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-1 col-lg-1"></div>
+							<div class="col-xs-4 col-lg-4 titleContentHeader homeTadekamForYouTitle">
+								<div class="row">
+									<div class="col-xs-12 col-lg-12">
+										Tadekam For You
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5 col-lg-5">
+										<div class="row">
+											<div class="col-xs-4 col-lg-4 titleContentBorder homeTadekamForYouBorder"></div>
+											<div class="col-xs-4 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-5 col-lg-5"></div>
+								</div>
+							</div>
+							<div class="col-xs-4 col-lg-4"></div>
+						</div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row contentRow">
-					<div class="col-lg-6"></div>
-					<div class="col-lg-1"></div>
+					<div class="col-xs-4 col-lg-4 homeTadekamForYouStones">
+						<img src="images/stones.png" alt="Stones" class="homeTadekamForYouStonesImage">
+					</div>
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutTadekamMenu">
+				<div class="row">
+					<div class="col-xs-12 col-16-12 bannerAboutUs">
+						<img src="images/banner_about_us.png" alt="Banner About Us">
+					</div>
+				</div>
 				<div class="row headerOfContentRow">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8 titleContentHeader">
-						Our Founder
+						<div class="row">
+							<div class="col-xs-12 col-lg-12">
+								Our Founder
+							</div>
+						</div>
 						<div class="row">
 							<div class="col-xs-5 col-lg-5"></div>
 							<div class="col-xs-2 col-lg-2">
 								<div class="row">
-									<div class="col-xs-2 col-lg-5"></div>
-									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
 							<div class="col-xs-5 col-lg-5"></div>
 						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						<div class="col-xs-4 col-lg-4"></div>
+						<div class="col-xs-4 col-lg-4 namePhotoHolder">
+							<img src="images/guruji.jpg" alt="Guruji" class="namePhoto">
+						</div>
+						<div class="col-xs-4 col-lg-4"></div>
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
@@ -269,13 +327,24 @@
 							<div class="col-xs-5 col-lg-5"></div>
 							<div class="col-xs-2 col-lg-2">
 								<div class="row">
-									<div class="col-xs-2 col-lg-5"></div>
-									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
 							<div class="col-xs-5 col-lg-5"></div>
 						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						<div class="col-xs-4 col-lg-4"></div>
+						<div class="col-xs-4 col-lg-4 namePhotoHolder">
+							<img src="images/seema.jpg" alt="Seema" class="namePhoto">
+						</div>
+						<div class="col-xs-4 col-lg-4"></div>
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
@@ -301,9 +370,9 @@
 							<div class="col-xs-5 col-lg-5"></div>
 							<div class="col-xs-2 col-lg-2">
 								<div class="row">
-									<div class="col-xs-2 col-lg-5"></div>
-									<div class="col-xs-8 col-lg-2 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-5"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
 								</div>
 							</div>
 							<div class="col-xs-5 col-lg-5"></div>
@@ -329,6 +398,120 @@
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
 						All Tadekam Teachers hold the license to teach the various courses and the  programs as designed by the founder Guruji Naushir.
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+			</div>
+			<div class="row mainContent" id="mainContentProgramsMenu">
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						Our Programs
+						<div class="row">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						Spiritual Programs
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						<div class="row">
+							<div class="col-xs-2 col-lg-4 programHolder">
+								<div class="row">
+								</div>
+								InConnect Workshop
+								<div class="row programShortDescription">
+									A short program for orientation on the spiritual path with initiation into a powerful Guru Mantra.
+								</div>
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-4 programHolder">
+								Breaking Boundaries
+								<div class="row programShortDescription">
+									These two days courses having three levels have been carefully crafted, to unleash the spiritual potential and power that lies within every human beings and break free of physical and mental limitations.
+								</div>
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-4 programHolder">
+								Tadekam Kriyas
+								<div class="row">(Basic and Advance)</div>
+								<div class="row programShortDescription">
+									These are very simple meditation practices, Mudras and Pranayams given by the Immortal Mahavatar Babaji directly to Guruji Naushir. 
+								</div>
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8">
+						<div class="row">
+							<div class="col-xs-2 col-lg-4 programHolder">
+								<div class="row">
+								</div>
+								Dhyan Shuddhi Meditation
+								<div class="row programShortDescription">
+									An intense Shiva centric meditation program to remove negativity through by chanting of Mantras and reciting Stotras.
+								</div>
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-4 programHolder">
+								Poornima Shanti
+								<div class="row programShortDescription">
+									Full Moon meditation to draw enhanced energies from the Masters through group activity.
+								</div>
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-4 programHolder">
+								Group Chanting
+								<div class="row programShortDescription">
+									Powerful mantras given by Mahavatar Babaji chanted in groups for enhanced energetic effect
+								</div>
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
