--- a/Tadekam.html
+++ b/Tadekam.html
@@ -214,11 +214,11 @@
 						<div class="row">
 							<div class="col-xs-2 col-lg-2"></div>
 							<div class="col-xs-8 col-lg-8">
-								<div class="col-xs-4 col-lg-4"></div>
-								<div class="col-xs-4 col-lg-4 namePhotoHolder">
+								<div class="col-xs-2 col-lg-4"></div>
+								<div class="col-xs-8 col-lg-4 namePhotoHolder">
 									<img src="images/guruji.jpg" alt="Guruji" class="namePhoto">
 								</div>
-								<div class="col-xs-4 col-lg-4"></div>
+								<div class="col-xs-2 col-lg-4"></div>
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
@@ -232,10 +232,15 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-xs-12 col-lg-12 homeGurujiQuote">
+						<img src="images/quote.png" alt="Quote">
+					</div>
+				</div>
+				<div class="row">
 					<div class="col-xs-8 col-lg-8 backgroundHomeTadekamForYou">
 						<div class="row headerOfContentRow">
 							<div class="col-xs-1 col-lg-1"></div>
-							<div class="col-xs-4 col-lg-4 titleContentHeader homeTadekamForYouTitle">
+							<div class="col-xs-11 col-lg-4 titleContentHeader homeTadekamForYouTitle">
 								<div class="row">
 									<div class="col-xs-12 col-lg-12">
 										Tadekam For You
@@ -251,7 +256,28 @@
 									<div class="col-xs-5 col-lg-5"></div>
 								</div>
 							</div>
-							<div class="col-xs-4 col-lg-4"></div>
+							<div class="col-lg-4"></div>
+						</div>
+						<div class="row textRow homeTadekamForYouTextRow">
+							<div class="col-xs-1 col-lg-1"></div>
+							<div class="col-xs-8 col-lg-8">
+								Learn to master your circumstances rather than be a victim. Learn to swim with the flow of life rather than against it. 
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow homeTadekamForYouTextRow">
+							<div class="col-xs-1 col-lg-1"></div>
+							<div class="col-xs-8 col-lg-8">
+								Learn to seamlessly integrate your journey of self-discovery living a normal life.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow homeTadekamForYouTextRow">
+							<div class="col-xs-1 col-lg-1"></div>
+							<div class="col-xs-8 col-lg-8">
+								Learn tools and techniques to transform your life towards health, success, confidence and happiness.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
 						</div>
 					</div>
 					<div class="col-xs-4 col-lg-4 homeTadekamForYouStones">
@@ -290,11 +316,11 @@
 				<div class="row">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
-						<div class="col-xs-4 col-lg-4"></div>
-						<div class="col-xs-4 col-lg-4 namePhotoHolder">
+						<div class="col-xs-2 col-lg-4"></div>
+						<div class="col-xs-8 col-lg-4 namePhotoHolder">
 							<img src="images/guruji.jpg" alt="Guruji" class="namePhoto">
 						</div>
-						<div class="col-xs-4 col-lg-4"></div>
+						<div class="col-xs-2 col-lg-4"></div>
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
@@ -340,11 +366,11 @@
 				<div class="row">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8">
-						<div class="col-xs-4 col-lg-4"></div>
-						<div class="col-xs-4 col-lg-4 namePhotoHolder">
+						<div class="col-xs-2 col-lg-4"></div>
+						<div class="col-xs-8 col-lg-4 namePhotoHolder">
 							<img src="images/seema.jpg" alt="Seema" class="namePhoto">
 						</div>
-						<div class="col-xs-4 col-lg-4"></div>
+						<div class="col-xs-2 col-lg-4"></div>
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
